--- a/app/src/main/res/layout/activity_checkout_page.xml
+++ b/app/src/main/res/layout/activity_checkout_page.xml
@@ -5,23 +5,25 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    tools:context=".Cart">
+    tools:context=".CheckoutPage">
 
     <LinearLayout
-        android:layout_width="405dp"
-        android:layout_height="692dp"
+        android:layout_width="409dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="22dp"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical"
         android:padding="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        >
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cart Products"
+            android:text="Order Summary"
             android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold" />
@@ -32,10 +34,10 @@
             android:layout_height="537dp" />
 
         <Button
-            android:id="@+id/checkout"
+            android:id="@+id/placeOrder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Checkout" />
+            android:text="Place Order" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
